2019-02-24  Mark Wielaard  <mark@klomp.org>

	* elf32_fsize.c (local_strong_alias): Remove definition.
	(msize): Remove alias.
	* libelfP.h (__elf32_msize): Remove definition.
	(__elf64_msize): Likewise.

2019-02-21  Mark Wielaard  <mark@klomp.org>

	* common.h (determine_kind): Only accept EV_CURRENT.
	* elf32_fsize.c (fsize): Just check version is EV_CURRENT.
	Use __libelf_type_size without version dimension.
	* elf32_updatefile.c (updatemmap): Define fctp from __elf_xfctstom
	without version dimension.
	(updatefile): Likewise.
	* elf32_updatenull.c (default_ehdr): Check e_version is EV_CURRENT.
	(updatenull_wrlock): Check d_version is EV_CURRENT.
	(elf32_xlatetof): Likewise. And get recsize without version
	dimension from __elf_xfctstom.
	(elf32_xlatetom): Likewise.
	* elf_begin.c (elf_begin): Check __libelf_version is EV_CURRENT.
	* elf_compress.c (__libelf_reset_rawdata): Set d_version to
	EV_CURRENT.
	* elf_getdata.c (shtype_map): Remove version dimension.
	(__libelf_type_aligns): Likewise.
	(__libelf_data_type): Use shtype_map without version dimension.
	(convert_data): Remove unused version argument. Get fp from
	__elf_xfctstom without version dimensions.
	(__libelf_set_data_list_rdlock): Call convert_data without version.
	* elf_getdata_rawchunk.c (elf_getdata_rawchunk): Call __elfcfctstom
	conversion function without version dimensions. Set d_version to
	EV_CURRENT.
	* elf_newdata.c (elf_newdata): Set d_version to EV_CURRENT.
	* elf_version.c (__libelf_version_initialized): Removed.
	(__libelf_version): Initialized to EV_NONE.
	(elf_version): Always return EV_CURRENT for EV_NONE version.
	Only accept (and return) EV_CURRENT as version.
	* gelf_fsize.c (__libelf_type_sizes): Remove version dimension.
	(gelf_fsize): Only accept EV_CURRENT as version.
	Use __libelf_type_sizes without version dimension.
	* gelf_xlate.c (__elf_xftstom): Remove version dimensions.
	* libelfP.h (__elf_xfctstom): Defined without version dimensions.
	(__elf_xfctstof): Likewise.